# ChangeLog for media-video/linuxdvb
# Copyright 2003 Martin Hierling; Distributed under the GPL
# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/media-libs/libdvb/ChangeLog,v 1.3 2003/07/13 16:34:42 mad Exp $

*libdvb-0.4.1 (13 Jul 2003) M.Hierling <mad@cc.fh-lippe.de>
  new version, adapted to 1.2.0

*libdvb-0.3.0 (26 Apr 2003) M.Hierling <mad@cc.fh-lippe.de> libdvb-0.3.0.ebuild
  new version, 1 new lib (for ci support)

*libdvb-0.2.3 (03 Apr 2003)
  initial