@@ -1,6 +1,9 @@
 # ChangeLog for media-video/linuxdvb
 # Copyright 2003 Martin Hierling; Distributed under the GPL
-# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/media-libs/libdvb/ChangeLog,v 1.3 2003/07/13 16:34:42 mad Exp $
+# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/media-libs/libdvb/ChangeLog,v 1.4 2003/10/28 14:02:31 martini Exp $
+
+*libdvb-0.5.0 (28 Oct 2003) Martin Mittelsdorf <martini@vdr-portal.de>
+  new version 0.5.0 with function VDR_OPTS
 
 *libdvb-0.4.1 (13 Jul 2003) M.Hierling <mad@cc.fh-lippe.de>
   new version, adapted to 1.2.0
